add_library(Connection STATIC "Connection.cpp" Connection.h)
add_library(RegularConnection STATIC "RegularConnection.cpp" RegularConnection.h)
target_link_libraries(Connection LINK_PUBLIC Section)
target_link_libraries(Connection LINK_PUBLIC Person)
target_link_libraries(Connection LINK_PUBLIC Vehicle)
target_link_libraries(RegularConnection LINK_PUBLIC Person)
target_link_libraries(RegularConnection LINK_PUBLIC Connection)
target_include_directories(Connection PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(RegularConnection PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
